@@ -3,6 +3,7 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  ADD: Additional volume slider for playlist window.
   ADD: ContextBrowser shows you images and information to the current song/artist.
        It depends on the collection and is presented as an HTML widget.
   CHG: Improved color handling and visual feedback in the GUI.
